schema/testdata/validation_operation_set_expression_forbidden_operator/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        create createProfile(username) {
            @set(profile.identity == ctx.identity)
        }
    }
}
